Add AuthToken to Bolt layer (#1609)
This is an internal improvement in the Bolt layer.